# Projet-POO-Jeu-de-la-vie-CPI-A2

./: CMakeLists.txt  grid_glider.txt  life_console  run_tests
grid_glider_out/: iteration_0.txt  iteration_1.txt  iteration_10.txt  iteration_11.txt  iteration_12.txt  iteration_13.txt  iteration_14.txt  iteration_15.txt  iteration_2.txt  iteration_21.txt  iteration_22.txt  iteration_23.txt  iteration_24.txt  iteration_25.txt  iteration_26.txt  iteration_27.txt  iteration_28.txt  iteration_29.txt  iteration_3.txt  iteration_30.txt  iteration_31.txt  iteration_32.txt  iteration_33.txt  iteration_34.txt  iteration_35.txt  iteration_36.txt  iteration_4.txt  iteration_5.txt  iteration_6.txt  iteration_7.txt  iteration_8.txt  iteration_9.txt
headers/: AliveCell.h  Cell.h  ConsoleView.h  DeadCell.h  GUIView.h  Game.h  Grid.h
include/: Cell.h  ConsoleView.h  FileManager.h  GUIView.h  ObstacleCell.h  PatternManager.h  View.h
resources/samples/: sample1.txt
src/: CMakeLists.txt  Cell.h  ConsoleRenderer.cpp  ConsoleRenderer.h  ConsoleView.cpp  ConwayRule.cpp  ConwayRule.h  FileManager.cpp  GUIView.cpp  Game.cpp  Game.h  Grid.cpp  Grid.h  ObstacleCell.cpp  PatternManager.cpp  Renderer.h  RuleSet.h  SFMLRenderer.cpp  SFMLRenderer.h  View.cpp  main.cpp
tests/: UnitTest.cpp  test_grid.cpp  tests.cpp
